--- a/.config
+++ b/.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/x86 5.1.6 Kernel Configuration
+# Linux/x86 5.1.8 Kernel Configuration
 #
 
 #
@@ -9538,7 +9538,12 @@ CONFIG_BINARY_PRINTF=y
 #
 # Library routines
 #
+
+#
+# RAID 6
+#
 CONFIG_RAID6_PQ=m
+# CONFIG_RAID6_FORCE_ALGO is not set
 CONFIG_RAID6_PQ_BENCHMARK=y
 CONFIG_BITREVERSE=y
 CONFIG_RATIONAL=y
