Linux 5.15.21-rt30-xanmod1
Signed-off-by: Alexandre Frade <kernel@xanmod.org>

--- a/CONFIGS/xanmod/clang/config
+++ b/CONFIGS/xanmod/clang/config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/x86 5.15.14 Kernel Configuration
+# Linux/x86 5.15.21 Kernel Configuration
 #
 CONFIG_CC_VERSION_TEXT="Debian clang version 12.0.1-16"
 CONFIG_GCC_VERSION=0
@@ -97,10 +97,8 @@ CONFIG_POSIX_CPU_TIMERS_TASK_WORK=y
 CONFIG_TICK_ONESHOT=y
 CONFIG_NO_HZ_COMMON=y
 # CONFIG_HZ_PERIODIC is not set
-# CONFIG_NO_HZ_IDLE is not set
-CONFIG_NO_HZ_FULL=y
-CONFIG_CONTEXT_TRACKING=y
-# CONFIG_CONTEXT_TRACKING_FORCE is not set
+CONFIG_NO_HZ_IDLE=y
+# CONFIG_NO_HZ_FULL is not set
 # CONFIG_NO_HZ is not set
 CONFIG_HIGH_RES_TIMERS=y
 # end of Timers subsystem
@@ -134,8 +132,8 @@ CONFIG_SCHED_CORE=y
 #
 # CPU/Task time and stats accounting
 #
-CONFIG_VIRT_CPU_ACCOUNTING=y
-CONFIG_VIRT_CPU_ACCOUNTING_GEN=y
+CONFIG_TICK_CPU_ACCOUNTING=y
+# CONFIG_VIRT_CPU_ACCOUNTING_GEN is not set
 # CONFIG_IRQ_TIME_ACCOUNTING is not set
 CONFIG_BSD_PROCESS_ACCT=y
 CONFIG_BSD_PROCESS_ACCT_V3=y
@@ -164,7 +162,6 @@ CONFIG_RCU_STALL_COMMON=y
 CONFIG_RCU_NEED_SEGCBLIST=y
 CONFIG_RCU_BOOST=y
 CONFIG_RCU_BOOST_DELAY=0
-CONFIG_RCU_NOCB_CPU=y
 # end of RCU Subsystem
 
 CONFIG_BUILD_BIN2C=y
@@ -413,8 +410,8 @@ CONFIG_ACRN_GUEST=y
 # CONFIG_MSAPPHIRERAPIDS is not set
 # CONFIG_MROCKETLAKE is not set
 # CONFIG_MALDERLAKE is not set
-CONFIG_GENERIC_CPU=y
-# CONFIG_GENERIC_CPU2 is not set
+# CONFIG_GENERIC_CPU is not set
+CONFIG_GENERIC_CPU2=y
 # CONFIG_GENERIC_CPU3 is not set
 # CONFIG_GENERIC_CPU4 is not set
 # CONFIG_MNATIVE_INTEL is not set
@@ -11137,7 +11134,7 @@ CONFIG_SCHEDSTATS=y
 # end of Scheduler Debugging
 
 # CONFIG_DEBUG_TIMEKEEPING is not set
-CONFIG_DEBUG_PREEMPT=y
+# CONFIG_DEBUG_PREEMPT is not set
 
 #
 # Lock Debugging (spinlocks, mutexes, etc...)
